# bascvi

./: .gitignore  README.md  bascvi.yml  pred_embedding_model.py  prod_embedding_model.py  pyproject.toml  run_configs.py  train_embedding_model.py
.github/ISSUE_TEMPLATE/: bug_report.md
bascvi/: README.md
bascvi/bascvi/datamodule/: notes.txt
bascvi/bascvi/model/: bdecoder.py  bencoder.py  distributions.py
bascvi/config/external_franken_immunity_2024_38442708/: predict_franken.json
bascvi/config/pal_emboj_2021/: gf_emb_no_disc.json  scgpt_emb.json
bascvi/config/scref_train/: gf_emb.json
bascvi/config/template/: scmark_gf_emb.json  scmark_soma.json  template.json  v6_soma.json
bascvi/config/v1.3mm_train/: v1.3mm_train.json
bascvi/datamodule/: concatpreds.py
bascvi/datamodule/embeddings/: datamodule.py
bascvi/datamodule/soma/: dataset.py  soma_helpers.py
bascvi/model/: __init__.py
bascvi/notebooks/: Evaluate data KNI (4).ipynb  explore_embeddings.ipynb  large_datamodule.ipynb  paper_llm_embeddings.ipynb
bascvi/scripts/: run_kni_scoring.py  run_predict.py
config/: BaScVI_4L_Both.json
config/pal_emboj_2021/: gf_emb.json
config/scref_train/: scgpt_emb.json
config/template/: scmark_scgpt_emb.json
datamodule/: __init__.py  adata_utils.py  datamodule.py  dataset.py
llm_scripts/: finetune_scgpt_integration.py
llm_scripts/scgpt-autoencoder/: datamodule_emb.py  dataset_emb.py  model.py
ml_benchmarking/: README.md  genes_2ksamples_10cells.txt  requirements.txt
ml_benchmarking/bascvi/datamodule/: prodconcatpreds.py
ml_benchmarking/bascvi/model/: bascvi.py  bdecoder.py  encoder.py  scvi.py
ml_benchmarking/bascvi/trainer/: bascvi_trainer.py
ml_benchmarking/bascvi/utils/: protein_embeddings.py  utils.py
ml_benchmarking/config/OLD_multispecies_paper/: train_ms_saturn_10k.json
ml_benchmarking/config/multispecies_paper/: predict.json  train_ms_saturn.json  train_ms_saturn_10k.json  train_ms_saturn_3k.json
ml_benchmarking/scripts/: hvg_script.py  make_genes_to_use_macrogenes.py  make_multispecies_train.py  precalc_saturn_mg.py  predict.py  run_config.py  run_configs.py  run_kni_scoring.py  run_metrics_scoring.py  run_predict.py  run_predict_on_folder.py  run_predict_scref.py  run_sweep.py  run_train.py  train.py
model/: bascvi.py  bencoder.py  decoder.py  scvi.py
notebooks/: extract_barcodes.ipynb  make_v1.3mm_train.ipynb  make_v6_train.ipynb  pai_embeddings_inference.ipynb  pai_soma_data.ipynb
notebooks/tutorials/: locally_embed_h5ad.ipynb
pai/: README.md
pai_soma_data/: README.md  pyproject.toml
scripts/: dataloader_speed_test.py  run_configs.py  run_predict_scref.py
soma_data/: README.md  pyproject.toml
src/llm_scripts/: embed_geneformer_zero_shot.py  embed_scgpt_zero_shot.py  geneformer_soma_to_h5ad.py
src/ml_benchmarking/: README.md  debug.out  requirements.txt
src/pai/: LICENSE  pyproject.toml
src/pai/src/pai/: __main__.py  cli.py
src/pai_soma_data/: pyproject.toml
src/pai_soma_data/src/pai_soma_data/: __init__.py
trainer/: __init__.py  bascvi_trainer.py
utils/: plot_utils.py  utils.py
(+129 files in other folders)
